Explicacion VM Arguments