@@ -27,5 +27,16 @@ public class Main extends Application {
 	
 	public static void main(String[] args) {
 		launch(args);
+		/*
+		 * 
+		 * Tanto el SDK para linux como windows se encuentran en la carpeta lib del proyecto.
+		 *  Es necesario configurar las VM Arguments en cada sistema. Para ello: 
+		 *  Click derecho en el proyecto --> Run As --> Run Configurations --> Seleccionar el run Main que corresponda a este proyecto
+		 *  --> VM Arguments -->
+		 *  En windows: --module-path "lib/javafx-sdk-11.0.2/lib" --add-modules javafx.controls,javafx.fxml
+		 *  En linux: --module-path "lib/javafxLin-sdk-11.0.2/lib" --add-modules javafx.controls,javafx.fxml
+		 * 
+		 * 
+		 * */
 	}
 }
